Removed GC logs